# singularity_detector

./: CMakeLists.txt  README.md  docs.conf  package.xml
html/: SingularityDetector_8h_source.html  annotated.html  classSingularityDetector-members.html  classSingularityDetector.html  classSingularityDetector__coll__graph.md5  classSingularityDetector__inherit__graph.map  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  string__colors_8h_source.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js  variables_0.js
src/: SingularityDetector.cpp  SingularityDetector.h
